--- a/regist.html
+++ b/regist.html
@@ -35,16 +35,16 @@
                     <form class="form-inline col-md-9 regist-form-span">
                         <label>账号：</label><br />
                         <embed src="svg/account.svg" class="login_svg regist_svg" />
-                        <input class="form-control regist_input_set" type="text" id="regist_account" name="regist_account" onclick="clear_text('regist_account')" onblur="check_account('regist_account','regist_account_check_end')" placeholder="请输入账号"/><span id="regist_account_check_end"></span><br /><br /><br />
+                        <input class="form-control regist_input_set" type="text" id="regist_account" name="regist_account" onblur="check_account('regist_account','regist_account_check_end')" placeholder="请输入账号"/><span id="regist_account_check_end"></span><br /><br /><br />
                         <label>密码：</label><br />
                         <embed src="svg/key.svg" class="login_svg regist_svg" />
-                        <input class="form-control regist_input_set" type="password" id="regist_account_frist_key" name="regist_account_frist_key" onclick="clear_text('regist_account_frist_key')" onblur="check_account_key('regist_account_frist_key','regist_account_frist_key_end')"  placeholder="请输入密码" ><span id="regist_account_frist_key_end"></span><br /><br /><br />
+                        <input class="form-control regist_input_set" type="password" id="regist_account_frist_key" name="regist_account_frist_key" onclick="clear_text('regist_account_frist_key')" onblur="check_account_key('regist_account_frist_key','regist_account_frist_key_end')"  placeholder="请输入密码" /><span id="regist_account_frist_key_end"></span><br /><br /><br />
                         <label>重复密码：</label><br />
                         <embed src="svg/second_key.svg" class="login_svg regist_svg" />
                         <input class="form-control regist_input_set" type="password" id="regist_account_second_key" name="regist_account_second_key" onclick="clear_text('regist_account_second_key')" onblur="check_second_account('regist_account_second_key','regist_account_second_key_end','regist_account_frist_key')" placeholder="请再次输入密码" /><span id="regist_account_second_key_end"></span><br /><br /><br />
                         <label>邮箱：</label><br />
                         <embed src="svg/mail.svg" class="login_svg regist_svg" />
-                        <input class="form-control regist_input_set" type="text" id="regist_mail" name="regist_mail" onclick="clear_text('regist_mail')" onblur="check_mail('regist_mail','regist_mail_check_end')" placeholder="请输入注册邮箱"/><span id="regist_mail_check_end"></span><br /><br /><br />
+                        <input class="form-control regist_input_set" type="text" id="regist_mail" name="regist_mail" onblur="check_mail('regist_mail','regist_mail_check_end')" placeholder="请输入注册邮箱"/><span id="regist_mail_check_end"></span><br /><br /><br />
                         <label>身份:</label><br />
                         <embed src="svg/identity.svg" class="login_svg regist_svg" />
                         <span class="regist-radio">老师  <input type="radio"  name="identity" value="teacher" data-toggle="collapse" data-target="#moreinfo" onclick="turn_on_more_info()"/></span>
