添加了移动端的滑动切换功能

--- a/index.html
+++ b/index.html
@@ -136,7 +136,7 @@
         </div>
 
         <!--页面主体中部-->
-        <div class="main_middle" onmousedown="Drag_switch_first(event)" onmouseup="Drag_switch_second(event)">
+        <div class="main_middle" id="main_middle">
             <div class="col-md-12 tree_title">
                 <h1><span><img src="img/comment-icon.png" alt=""></span>&ensp;推荐知识树</h1>
             </div>
