--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
                                             </form>
                                         </div>
                                         <div class="modal-footer">
-                                            <button type="button" class="btn btn-primary">登录</button>
+                                            <button type="button" class="btn btn-primary" onclick="login()">登录</button>
                                             <button type="button" class="btn btn-default" data-dismiss="modal">关闭</button>
                                         </div>
                                     </div><!-- /.modal-content -->
