--- a/regist.html
+++ b/regist.html
@@ -18,7 +18,7 @@
     <div class="row regist-head-set">
         <div class="regist-head-VP">
             <div class="regist-head-width center-block">
-                <img class="img-circle regist-head-img head-set " src="img/seize.jpg" />
+                <img class="img-circle regist-head-img head-set " src="img/logo.png" />
                 <h1 class="head-set head-h1-set"><b>"知行合一"智能助学</b></h1>
             </div>
         </div>
